--- a/Game.html
+++ b/Game.html
@@ -20,22 +20,22 @@
 
     </div>
     <div class="person">
-        <span id="charakter"> <img src="Personen/ryoko_school_normaltalk.png"> </span>
+        <span id="charakter"> <img src="Personen/Frauen/Blondi/ryoko_school_normaltalk.png"> </span>
     </div>
     <div class="id-card">
         <div class="info">
-            <p><strong>Vorname:</strong> xxx</p>
-            <p><strong>Nachname:</strong> xxx</p>
-            <p><strong>Geburtstag:</strong> xxx</p>
-            <p><strong>Geschlecht:</strong> x</p>
+            <p><strong>Vorname:</strong> <span id="vorname">xxx</span> </p>
+            <p><strong>Nachname:</strong> <span id="nachname">xxx</span></p>
+            <p><strong>Geburtstag:</strong> <span id="geburtstag">xxx</span></p>
+            <p><strong>Geschlecht:</strong> <span id="geschlecht">xxx</span></p>
         </div>
         <div class="picture">
-            <span id="picture-feld"><img src="Personen/blondiausweis.png"></span>
+            <span id="picture-feld"><img src="Personen/Frauen/Blondi/blondiausweis.png"></span>
         </div>
     </div>
     <div class="button">
-        <div id="NEIN"> ABWEISEN</div>
-        <div id="JA" >REINLASSEN</div>
+        <div id="NEIN" value=false> ABWEISEN</div>
+        <div id="JA" value=false>REINLASSEN</div>
     </div>
 
 
