--- a/Game.html
+++ b/Game.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Ausweiskontrolle</title>
     <link rel="stylesheet" type="text/css" href="Game.css"/>
     <link href="https://fonts.googleapis.com/css2?family=Black+Ops+One&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Staatliches&display=swap" rel="stylesheet">
@@ -10,34 +10,43 @@
     <script type="text/javascript" src="Game.js"></script>
 </head>
 <body>
-    <div class="anzeige">
-        <div id="Days">
-            Days <span id="days-count">0</span>
-        </div>
-        <div id="Money">
-            Dein Konto: <span id="coins-count">0</span>€
-        </div>
 
-    </div>
-    <div class="person">
-        <span id="charakter"> <img src="Personen/Frauen/Blondi/ryoko_school_normaltalk.png"> </span>
-    </div>
-    <div class="id-card">
-        <div class="info">
-            <p><strong>Vorname:</strong> <span id="vorname">xxx</span> </p>
-            <p><strong>Nachname:</strong> <span id="nachname">xxx</span></p>
-            <p><strong>Geburtstag:</strong> <span id="geburtstag">xxx</span></p>
-            <p><strong>Geschlecht:</strong> <span id="geschlecht">xxx</span></p>
-        </div>
-        <div class="picture">
-            <span id="picture-feld"><img src="Personen/Frauen/Blondi/blondiausweis.png"></span>
-        </div>
-    </div>
-    <div class="button">
-        <div id="NEIN" value=false> ABWEISEN</div>
-        <div id="JA" value=false>REINLASSEN</div>
-    </div>
+<!-- Anzeigeleiste -->
+<div class="anzeige">
+    <div id="Days">Days <span id="days-count">0</span></div>
+    <div id="Money">Dein Konto: <span id="coins-count">0</span>€</div>
+</div>
 
+<!-- Charakteranzeige -->
+<div class="person">
+        <span id="charakter">
+            <img src="Personen/Frauen/Blondi/ryoko_school_normaltalk.png" alt="Charakter">
+        </span>
+</div>
+
+<!-- Ausweisdaten -->
+<div class="id-card">
+    <div class="info">
+        <p><strong>Vorname:</strong> <span id="vorname">xxx</span></p>
+        <p><strong>Nachname:</strong> <span id="nachname">xxx</span></p>
+        <p><strong>Geburtstag:</strong> <span id="geburtstag">xxx</span></p>
+        <p><strong>Geschlecht:</strong> <span id="geschlecht">xxx</span></p>
+    </div>
+    <div class="picture">
+            <span id="picturefeld">
+                <img src="Personen/Frauen/Blondi/blondiausweis.png" alt="Ausweisfoto">
+            </span>
+    </div>
+</div>
+
+
+<div id="dialog"></div>
+
+<!-- Buttons -->
+<div class="button">
+    <div id="NEIN" value="false">ABWEISEN</div>
+    <div id="JA" value="true">REINLASSEN</div>
+</div>
 
 </body>
 </html>
