--- a/Gamemenu.html
+++ b/Gamemenu.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Staatliches&display=swap" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script type="text/javascript" src="Landingpage.js"></script>
+    <script type="text/javascript" src="Gamemenu.js"></script>
 </head>
 <body>
 <div class="grid">
