--- a/Gamemenu.html
+++ b/Gamemenu.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Tag Menu - Türsteher Simulator</title>
     <link rel="stylesheet" type="text/css" href="Gamemenu.css"/>
     <link href="https://fonts.googleapis.com/css2?family=Black+Ops+One&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Staatliches&display=swap" rel="stylesheet">
@@ -13,18 +14,20 @@
 <body>
 <div class="grid">
     <div id="header">
-        <!--Hier Tag von JSON holen-->
-        <h1>DAY <span id="days-count">0</span></h1>
+        <h1>TAG <span id="days-count">0</span></h1>
     </div>
     <a href="Game.html" class="start-card">
-        <h2>STARTE DEN TAG</h2></a> <br>
-    <a href="Gamemenu.html" class="options-card">
+        <h2>STARTE DEN TAG</h2>
+    </a>
+    <a href="Shop.html" class="options-card">
         <h2>SHOP</h2>
     </a>
-    <div class="coins-display">
-        <h2>Dein Konto: <span id="coins-count">0</span>€</h2>
-    </div>
-
+    <a href="Landingpage.html" class="back-card">
+        <h2>HAUPTMENÜ</h2>
+    </a>
+</div>
+<div class="coins-display">
+    <h2>Dein Konto: <span id="coins-count">0</span>€</h2>
 </div>
 </body>
 </html>
