--- a/Landingpage.html
+++ b/Landingpage.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Türsteher Simulator</title>
     <link rel="stylesheet" type="text/css" href="Landingpage.css"/>
     <link href="https://fonts.googleapis.com/css2?family=Black+Ops+One&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Staatliches&display=swap" rel="stylesheet">
@@ -10,15 +10,15 @@
     <script type="text/javascript" src="Landingpage.js"></script>
 </head>
 <body>
-    <div class="grid">
-        <div id="header">
-            <h1>TÜRSTEHER SIMULATOR</h1>
-        </div>
-        <a href="Gamemenu.html" class="start-card">
-            <h2>START</h2></a>
-        <a href="Gamemenu.html" class="options-card">
-             <h2>OPTIONS</h2>
-        </a>
+<div class="grid">
+    <div id="header">
+        <h1>TÜRSTEHER SIMULATOR</h1>
     </div>
+    <a href="Gamemenu.html" class="start-card">
+        <h2>START</h2></a>
+    <a href="Options.html" class="options-card">
+        <h2>OPTIONS</h2>
+    </a>
+</div>
 </body>
 </html>
